--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ h4{
 
 @media all and (min-width:320px) and (max-width:500px){
   .hero{
-    margin: 10px;
+      margin: 20px 30px 20px 30px;
   }
   .container{
     width: 350px;
