--- a/style.css
+++ b/style.css
@@ -95,8 +95,11 @@ h4{
 
 
 @media all and (min-width:320px) and (max-width:500px){
-  .hero{
-      margin: 20px 30px 20px 30px;
+ .hero{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+    
   }
   .container{
     width: 350px;
