--- a/style.css
+++ b/style.css
@@ -95,16 +95,17 @@ h4{
 
 
 @media all and (min-width:320px) and (max-width:500px){
- .hero{
+.hero{
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 50%;
     
   }
   .container{
-    width: 350px;
+    width: 400px;
     height: 200px;
-    margin-left: -310px;
+    margin-left: -290px;
   }
   .container::after{
     left: 150px;
@@ -117,7 +118,7 @@ h4{
 h4{
 margin-top: 100px;
 margin-left: 40px;
-font-size: 28px;
+font-size: 32px;
 color: #f41b75;
 font-family: 'Gill Sans'
 }
